update tags in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "license": "ISC",
   "keywords": [
+    "typescript",
     "typesafe",
+    "type",
     "electron",
     "ipc",
     "request",
